2007-05-09  Jan-Oliver Wagner <jan-oliver.wagner@intevation.de>

	Introduce "make dist" to create a tar-ball.

	* VERSION: Set to .CVS.

	* MANIFEST: New. List of source files for dist.

	* Makefile: New target "dist".

2007-05-09  Jan-Oliver Wagner <jan-oliver.wagner@intevation.de>

	* nessus-config.pre.in: Removed.

	* libopenvas-config.pre.in: New. Replaces nessus-config.pre.in.

	* nessus-config.1: Removed.

	* libopenvas-config.1: New. Replaces nessus-config.1.

	* configure.in, Makefile: Replace nessus-config by libopenvas-config.

2007-05-09  Jan-Oliver Wagner <jan-oliver.wagner@intevation.de>

	* nessus-config.pre.in, Makefile: Removed DESTDIR. It looks
	pretty useless as it needs to be set in the shell.
	It was introduced in Nessus 1.3.1.

2007-05-09  Jan-Oliver Wagner <jan-oliver.wagner@intevation.de>

	* libopenvas/plugutils.c: Removed any conditional alternatives
	for HAVE_SSL (ssl is mandatory now)

2007-05-09  Jan-Oliver Wagner <jan-oliver.wagner@intevation.de>

	First, intermediate step of migrating from OpenSSL to GNUTLS:
	Remove the all old stuff at the configure-level.

	* configure.in: Removed any  handling of OpenSSL and the
	conditional handling of SSL support. Inserterted mandatory
	requirement of GNUTLS.

	* configure: Updated.

	* openvas-libraries.tmpl.in, nessus-config.pre.in: Removed
	any OpenSSL handling.

2007-04-26  Jan-Oliver Wagner <jan-oliver.wagner@intevation.de>

	* configure.in: Removed cygwin stuff.

2007-04-24  Jan-Oliver Wagner <jan-oliver.wagner@intevation.de>

	* configure.in, Makefile, INSTALL_README: Removed handling of "uninstall-nessus".

	* uninstall-nessus.in: Removed.

2007-04-12  Jan-Oliver Wagner <jan-oliver.wagner@intevation.de>

	Removing various Windows related files.

	* README.WINDOWS, nmake.w32, nmake.bat, nessus.def,
	include/config.w32, include/ntcompat.h: Removed.

	* include/includes.h: Removed some W32-specific elements.

2007-03-29  Jan-Oliver Wagner <jan-oliver.wagner@intevation.de>
