@@ -1,3 +1,8 @@
+2007-05-14  Jan-Oliver Wagner <jan-oliver.wagner@intevation.de>
+
+	* Makefile: installation target for headerfiles renamed from
+	nessus to openvas.
+
 2007-05-09  Jan-Oliver Wagner <jan-oliver.wagner@intevation.de>
 
 	Introduce "make dist" to create a tar-ball.
